CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(Tests)

LOAD_OPENCV()
LOAD_NCNN()
LOAD_GTEST()

SET(DEPENDENCY_INCLUDES
    ${PROJECT_INCLUDE_DIR}
    ${CMAKE_INCLUDE_PATH}
    ${OpenCV_INCLUDE_DIRS}
    ${GTEST_INCLUDE_DIRS}
)

SET(DEPENDENCY_LIBS
    core
    module_logger
    GTest::gtest
    ${OpenCV_LIBS}
)

FILE(MAKE_DIRECTORY ${PROJECT_OUTPUT_DIR}/bin/tests)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_DIR}/bin/tests)
FILE(GLOB_RECURSE CURRENT_DIR_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
MESSAGE(STATUS "APP SOURCES: ${CURRENT_DIR_SRCS}")
ADD_EXECUTABLE(main ${CURRENT_DIR_SRCS})
TARGET_INCLUDE_DIRECTORIES(main PRIVATE ${DEPENDENCY_INCLUDES})
TARGET_LINK_LIBRARIES(main PRIVATE ${DEPENDENCY_LIBS})
INSTALL(TARGETS main DESTINATION tests)

IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/data")
    INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/data" DESTINATION .)
ENDIF()

IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/models")
    INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/models" DESTINATION .)
ENDIF()
