CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(ultra_sound_api)

SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

FILE(GLOB_RECURSE CURRENT_DIR_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR}/api)
FOREACH(include ${CURRENT_DIR_HEAD})
	MESSAGE("-- Copying ${include}")
	CONFIGURE_FILE(${include} ${PROJECT_INCLUDE_DIR}/api COPYONLY)
ENDFOREACH()

FILE(GLOB HEADER_FILES
    "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp"
)
INSTALL(FILES ${HEADER_FILES}
    DESTINATION ${CMAKE_INSTALL_PREFIX}/include
)
