CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(core)

SET(CMAKE_POSITION_INDEPENDENT_CODE ON) 

LOAD_OPENCV()
LOAD_NCNN()

FILE(GLOB_RECURSE CURRENT_DIR_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR}/core)
FOREACH(include ${CURRENT_DIR_HEAD})
	MESSAGE("-- Copying ${include}")
	CONFIGURE_FILE(${include} ${PROJECT_INCLUDE_DIR}/core COPYONLY)
ENDFOREACH()

FILE(GLOB_RECURSE CURRENT_DIR_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

ADD_LIBRARY(core ${CURRENT_DIR_SRCS})
TARGET_INCLUDE_DIRECTORIES(core PRIVATE ${PROJECT_INCLUDE_DIR} ${NCNN_INCLUDE_DIR} ${OpenCV_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(core PRIVATE ${NCNN_LIBS} module_logger)
# INSTALL(TARGETS core DESTINATION lib)
