CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(ultra_sound)

SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

LOAD_OPENCV()

IF (TARGET_OS STREQUAL "Android")
    LOAD_ANDROID_ENV()
ENDIF()

FILE(GLOB_RECURSE CURRENT_DIR_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(MAKE_DIRECTORY ${PROJECT_INCLUDE_DIR}/ultra_sound)
FOREACH(include ${CURRENT_DIR_HEAD})
	MESSAGE("-- Copying ${include}")
	CONFIGURE_FILE(${include} ${PROJECT_INCLUDE_DIR}/ultra_sound COPYONLY)
ENDFOREACH()

FILE(GLOB_RECURSE CURRENT_DIR_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)

SET(DEPENDENCY_INCLUDES
	${PROJECT_INCLUDE_DIR} 
	${PROJECT_INCLUDE_DIR}/ultra_sound
	${OpenCV_INCLUDE_DIRS} 
)

SET(DEPENDENCY_LIBS
	core
	module_logger
	${OpenCV_LIBS}
	${ANDROID_JIN_LIBS}
)

IF(INFER_ENGINE STREQUAL NCNN)
	LOAD_NCNN()
	LIST(APPEND DEPENDENCY_INCLUDES ${NCNN_INCLUDE_DIR})
	LIST(APPEND DEPENDENCY_LIBS ${OpenMP_CXX_FLAGS} ${NCNN_LIBS})
	ADD_COMPILE_OPTIONS(-fopenmp)
ELSEIF(INFER_ENGINE STREQUAL ORT)
	LOAD_ONNXRUNTIME()
	LIST(APPEND DEPENDENCY_INCLUDES ${ONNXRUNTIME_INCLUDE_DIR})
	LIST(APPEND DEPENDENCY_LIBS ${ONNXRUNTIME_LIBS})
ELSE()
    MESSAGE(FATAL_ERROR "Invalid inference engine type ${INFER_ENGINE}")
ENDIF()

# Build Shared Library
ADD_LIBRARY(ultra_sound SHARED ${CURRENT_DIR_SRCS})
TARGET_COMPILE_DEFINITIONS(ultra_sound PRIVATE ULTRA_SOUND_BUILD_DLL)

TARGET_INCLUDE_DIRECTORIES(ultra_sound PRIVATE ${DEPENDENCY_INCLUDES})
TARGET_LINK_LIBRARIES(ultra_sound PRIVATE ${DEPENDENCY_LIBS})

SET_TARGET_PROPERTIES(ultra_sound PROPERTIES
	VERSION 1.0.0
	SOVERSION 1
)

INSTALL(TARGETS ultra_sound
    EXPORT ultra_sound-targets
    LIBRARY DESTINATION lib
    RUNTIME DESTINATION bin
)

INSTALL(EXPORT ultra_sound-targets
    NAMESPACE ultra_sound::
    DESTINATION lib/cmake/ultra_sound
)
